--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>pl.psnc.dl.ege</groupId>
@@ -80,43 +80,45 @@
     <module>ege-framework</module>
   </modules>
   <build>
-<plugins>
-<plugin>
-		<artifactId>maven-assembly-plugin</artifactId>
-		<version>2.2-beta-4</version>
-		<configuration>
-			<descriptors>
-				<descriptor>src/main/assembly/dist.xml</descriptor>
-				<descriptor>src/main/assembly/site.xml</descriptor>
-			</descriptors>
-			<finalName>ege-webapp-${project.version}</finalName>
-		</configuration>
-	</plugin>
-<plugin>
-<groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-compiler-plugin</artifactId>
-   <configuration>
-     <compilerArgument>-verbose </compilerArgument>
-     <source>1.5</source>
-     <target>1.5</target>
-   </configuration>
-</plugin>
-</plugins>
-</build>
-<reporting>
     <plugins>
-		 <plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-project-info-reports-plugin</artifactId>
-			<reportSets>
-				<reportSet>
-					<reports>
-						<report>project-team</report>
-						<report>license</report>
-					</reports>
-				</reportSet>
-			</reportSets>
-		</plugin>
-	</plugins>
+      <plugin>
+	<artifactId>maven-assembly-plugin</artifactId>
+	<version>2.2-beta-4</version>
+	<configuration>
+	  <descriptors>
+	    <descriptor>src/main/assembly/dist.xml</descriptor>
+	    <descriptor>src/main/assembly/site.xml</descriptor>
+	  </descriptors>
+	  <finalName>ege-webapp-${project.version}</finalName>
+	</configuration>
+      </plugin>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<version>2.3.2</version>
+	<artifactId>maven-compiler-plugin</artifactId>
+	<configuration>
+	  <compilerArgument>-verbose </compilerArgument>
+	  <source>1.5</source>
+	  <target>1.5</target>
+	</configuration>
+      </plugin>
+    </plugins>
+  </build>
+  <reporting>
+    <plugins>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<version>2.3.2</version>
+	<artifactId>maven-project-info-reports-plugin</artifactId>
+	<reportSets>
+	  <reportSet>
+	    <reports>
+	      <report>project-team</report>
+	      <report>license</report>
+	    </reports>
+	  </reportSet>
+	</reportSets>
+      </plugin>
+    </plugins>
   </reporting>
 </project>
