bring oxgarage branch up to date with Oxford version
git-svn-id: https://enrich-ege.svn.sourceforge.net/svnroot/enrich-ege/project/oxgarage@71 4830b8e0-8a90-4283-b7f1-a7364ff6f0ab

--- a/ege-api/pom.xml
+++ b/ege-api/pom.xml
@@ -6,11 +6,23 @@
   <packaging>jar</packaging>
   <version>0.2.1</version>
   <name>EGE API</name>
+  <properties>
+
+    <project.build.sourceEncoding>
+      UTF-8
+    </project.build.sourceEncoding>
+
+    <project.reporting.outputEncoding>
+      UTF-8
+    </project.reporting.outputEncoding>
+
+  </properties>
+
   <url>multiprojects/ege-api/</url>
   <parent>
     <groupId>pl.psnc.dl.ege</groupId>
     <artifactId>ege</artifactId>
-    <version>0.4.3</version>
+    <version>0.5.0</version>
   </parent>
   <description>
    Major EGE library contains necessary interfaces and classes.
@@ -87,12 +99,13 @@
             <descriptor>src/main/assembly/dist.xml</descriptor>
             <descriptor>src/main/assembly/src.xml</descriptor>
           </descriptors>
-          <finalName>${artifactId}-${project.version}</finalName>
+          <finalName>${project.artifactId}-${project.version}</finalName>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+	<version>2.3.2</version>
         <configuration>
           <compilerArgument>-verbose </compilerArgument>
           <source>1.5</source>
