--- a/tei-converter/pom.xml
+++ b/tei-converter/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>ege</artifactId>
     <groupId>pl.psnc.dl.ege</groupId>
-    <version>0.4.3</version>
+    <version>0.5.0</version>
   </parent>
   <!-- <build>
 	<plugins>
@@ -32,6 +32,19 @@
   <artifactId>tei-converter</artifactId>
   <version>0.5</version>
   <name>EGE TEI Converter</name>
+  <properties>
+
+    <project.build.sourceEncoding>
+      UTF-8
+    </project.build.sourceEncoding>
+
+    <project.reporting.outputEncoding>
+      UTF-8
+    </project.reporting.outputEncoding>
+
+  </properties>
+
+
   <url>/multiprojects/tei-converter</url>
   <description>EGE converter plugin - allows to perform multiple TEI format transformations.</description>
   <licenses>
@@ -101,6 +114,8 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+	<version>2.3.2</version>
+
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
