refactor code to avoid duplication between file upload and POST
git-svn-id: https://enrich-ege.svn.sourceforge.net/svnroot/enrich-ege/project/oxgarage@89 4830b8e0-8a90-4283-b7f1-a7364ff6f0ab

--- a/Tests/Makefile
+++ b/Tests/Makefile
@@ -20,6 +20,7 @@ test:
 	diff temp-results/result4.dtd expected-results/result4.dtd
 	echo To LaTeX
 	curl -s  -F upload=@test.xml  -o temp-results/result2.tex http://$(SERVER):$(PORT)/ege-webservice/Conversions/TEI%3Atext%3Axml/latex%3Aapplication%3Ax-latex
+	perl -p -i -e 's/TheFullDate{.*}/TheFullDate{}/' temp-results/result2.tex
 	diff temp-results/result2.tex expected-results/result2.tex
 	echo To ePub
 	curl -s  -o temp-results/result.epub -F upload=@test.xml http://$(SERVER):$(PORT)/ege-webservice/Conversions/TEI%3Atext%3Axml/epub%3Aapplication%3Aepub%2Bzip
