--- a/tei-converter/pom.xml
+++ b/tei-converter/pom.xml
@@ -6,28 +6,6 @@
     <groupId>pl.psnc.dl.ege</groupId>
     <version>0.5.0</version>
   </parent>
-  <!-- <build>
-	<plugins>
-
-		<plugin>
-			<artifactId>maven-assembly-plugin</artifactId>
-			<configuration>
-				<descriptors>
-					<descriptor>src/main/assembly/src.xml</descriptor>
-				</descriptors>
-			</configuration>
-			<executions>
-				<execution>
-					<id>templates</id> 
-					<phase>package</phase> 
-					<goals>
-						<goal>single</goal>
-					</goals>
-				</execution>
-			</executions>
-		</plugin>
-	</plugins>
-  </build> -->
   <groupId>pl.psnc.dl.ege.tei</groupId>
   <artifactId>tei-converter</artifactId>
   <version>0.5</version>
@@ -93,7 +71,7 @@
     <developer>
       <id>sebastian.rahtz</id>
       <name>Sebastian Rahtz</name>
-      <email>sebastian.rahtz@oucs.ox.ac.uk</email>
+      <email>sebastian.rahtz@it.ox.ac.uk</email>
       <roles>
         <role>Stakeholder</role>
       </roles>
@@ -123,11 +101,11 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jxr-plugin</artifactId>
+        <artifactId>maven-jxr-plugin</artifactId><version>2.3</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
+        <artifactId>maven-javadoc-plugin</artifactId><version>2.9</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -165,10 +143,20 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>org.tei.vesta</groupId>
-      <artifactId>Vesta</artifactId>
-      <version>1.0.8</version>
+      <groupId>org.tei</groupId>
+      <artifactId>tei-javalib</artifactId>
+      <version>0.5</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+	<groupId>com.thaiopensource</groupId>
+	<artifactId>trang</artifactId>
+	<version>20091111</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.saxon</groupId>
+      <artifactId>Saxon-HE</artifactId>
+	<version>9.4</version>
     </dependency>
   </dependencies>
 </project>
