more work on cleaning up source so it compiles cleanly
git-svn-id: https://enrich-ege.svn.sourceforge.net/svnroot/enrich-ege/project/oxgarage@100 4830b8e0-8a90-4283-b7f1-a7364ff6f0ab

--- a/ege-framework/pom.xml
+++ b/ege-framework/pom.xml
@@ -151,8 +151,7 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>1.4</version>
-      <scope>compile</scope>
+      <version>2.4</version>
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
@@ -161,14 +160,20 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>jpf</groupId>
+      <groupId>net.sf.jpf</groupId>
       <artifactId>jpf</artifactId>
-      <version>1.5.1</version>
+      <version>1.5</version>
       <scope>compile</scope>
-    </dependency><dependency>
+    </dependency>
+    <dependency>
       <groupId>jpf-tools</groupId>
       <artifactId>jpf-tools</artifactId>
       <version>1.5.1</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.jpf</groupId>
+      <artifactId>jpf-boot</artifactId>
+      <version>1.5</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
