--- a/oo-converter/pom.xml
+++ b/oo-converter/pom.xml
@@ -190,9 +190,9 @@
       <version>1.1</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons.io</groupId>
+      <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>1.4</version>
+      <version>2.4</version>
     </dependency>
     <dependency>
       <groupId>org.json</groupId>
@@ -203,12 +203,6 @@
       <groupId>com.artofsolving</groupId>
       <artifactId>jodconverter</artifactId>
       <version>3.0-beta-3</version>
-    </dependency>
-    <dependency>
-      <groupId>org.tei.vesta</groupId>
-      <artifactId>Vesta</artifactId>
-      <version>1.0.8</version>
-      <scope>compile</scope>
     </dependency>
   </dependencies>
 </project>
