--- a/oo-converter/pom.xml
+++ b/oo-converter/pom.xml
@@ -204,5 +204,11 @@
       <artifactId>jodconverter</artifactId>
       <version>3.0-beta-3</version>
     </dependency>
+    <dependency>
+      <groupId>org.tei</groupId>
+      <artifactId>tei-javalib</artifactId>
+      <version>0.5</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
