close stream not file

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@ TAGS
 Tests/conversions.xml
 
 Tests/about-equations.zip
+
+ege-api/target
+ege-framework/target
+ege-validator/target
+ege-webclient/target
+ege-webservice/target
+ege-xsl-converter/target
+oo-converter/target
+tei-converter/target
+tei-javalib/target
