--- a/debian-tei-oxgarage/debian/control
+++ b/debian-tei-oxgarage/debian/control
@@ -1,7 +1,7 @@
 Source: tei-oxgarage
 Section: web
 Priority: optional
-Maintainer: Sebastian Rahtz <sebastian.rahtz@oucs.ox.ac.uk>
+Maintainer: Sebastian Rahtz <sebastian.rahtz@it.ox.ac.uk>
 Build-Depends: debhelper (>> 3.0.0)
 Standards-Version: 3.9.1
 
@@ -9,5 +9,5 @@ Package: tei-oxgarage
 Architecture: all
 Pre-Depends: openjdk-6-jre | openjdk-7-jre | openjdk-8-jre
 Depends: tei-xsl,tei-p5-source
-Description: Web, and RESTful, service to manage the transformation of TEI-related  documents
-    Oxgarage deals with a vareity of input and output formats, with the majority of transformations using the Text Encoding Initiative format as a pivot format
+Recommends: tomcat7
+Description: Web, and RESTful, service to manage the transformation of TEI-related  documents Oxgarage deals with a vareity of input and output formats, with the majority of transformations using the Text Encoding Initiative format as a pivot format
