dont try to build doc

--- a/debian-tei-oxgarage/debian/rules
+++ b/debian-tei-oxgarage/debian/rules
@@ -34,7 +34,7 @@ install: build
 	cp ../ege-webservice/target/ege-webservice/WEB-INF/lib/oxgarage.properties $(DESTDIR)/etc
 	mkdir -p $(DESTDIR)/var/cache/oxgarage
 	cp ../log4j.xml $(DESTDIR)/var/cache/oxgarage
-	test -d target/site && mv ../target/site $(DESTDIR)/share/doc/tei-oxgarage
+	#mv ../target/site $(DESTDIR)/share/doc/tei-oxgarage
 
 
 # Build architecture-independent files here.
