--- a/tei-converter/pom.xml
+++ b/tei-converter/pom.xml
@@ -158,5 +158,10 @@
       <artifactId>Saxon-HE</artifactId>
 	<version>9.4</version>
     </dependency>
+    <dependency>
+        <groupId>com.twelvemonkeys.imageio</groupId>
+        <artifactId>imageio-tiff</artifactId>
+        <version>3.1.1</version>
+    </dependency>
   </dependencies>
 </project>
